--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,9 +83,10 @@ OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab.BP_BeerMugWit
 OpenAssetsAtExit=/Game/(PRG)Everyone/BP_SpawnManagerTarget.BP_SpawnManagerTarget
 OpenAssetsAtExit=/Game/(PRG)Everyone/FlammableDebris.FlammableDebris
 OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_Soup.BP_Soup
-OpenAssetsAtExit=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests.RumOnTheRocks_BIGGER_Rev12_NewChests:PersistentLevel.RumOnTheRocks_BIGGER_Rev12_NewChests
 OpenAssetsAtExit=/Game/(PRG)Everyone/BP_Client.BP_Client
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers.WBP_OrderNumbers
+OpenAssetsAtExit=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests.RumOnTheRocks_BIGGER_Rev12_NewChests:PersistentLevel.RumOnTheRocks_BIGGER_Rev12_NewChests
+OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_Ribs.BP_Ribs
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1179,7 +1180,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.Cons
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.File Path,
 MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 ThirdPersonGameMode_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
-Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+Character=
 AnimBP_Skeleton_C=
 CameraActor=CameraActor.PostProcess.Lens,
 StaticMesh=
@@ -1281,25 +1282,25 @@ DefaultLevelSequenceInstanceData=
 LevelSequenceActor=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
-MRUItem1=/Game/Particles/orbit
-MRUItem2=/Game/(ART)Everyone/Art/PtxTest
-MRUItem3=/Game/(PRG)Everyone/BP_SpawnManagerTarget
-MRUItem4=/Game/(PRG)Everyone/FlammableDebris
-MRUItem5=/Game/(PRG)Everyone/Deliveries/BP_Soup
-MRUItem6=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
-MRUItem7=/Game/(PRG)Everyone/BP_Client
-MRUItem8=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
-MRUItem9=/Game/(PRG)Everyone/Deliveries/BP_Magnum
-MRUItem10=/Game/(PRG)Everyone/Deliveries/BP_AppleBasket
-MRUItem11=/Game/(PRG)Everyone/Deliveries/BP_Ribs
-MRUItem12=/Game/(PRG)Everyone/RedBarrel
-MRUItem13=/Game/(PRG)Everyone/BP_MagicChestCarry
-MRUItem14=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestDestroy
-MRUItem15=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire
-MRUItem16=/Game/VFXapprentice/00_Simple_Emitters/Particle_Systems/10_Directional_Spikes
-MRUItem17=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/(PRG)Everyone/Deliveries/BP_Ribs
+MRUItem1=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
+MRUItem2=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
+MRUItem3=/Game/(PRG)Everyone/BP_Client
+MRUItem4=/Game/(PRG)Everyone/Deliveries/BP_Soup
+MRUItem5=/Game/(PRG)Everyone/FlammableDebris
+MRUItem6=/Game/(PRG)Everyone/BP_SpawnManagerTarget
+MRUItem7=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
+MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem9=/Game/Particles/orbit
+MRUItem10=/Game/(ART)Everyone/Art/PtxTest
+MRUItem11=/Game/(PRG)Everyone/Deliveries/BP_Magnum
+MRUItem12=/Game/(PRG)Everyone/Deliveries/BP_AppleBasket
+MRUItem13=/Game/(PRG)Everyone/RedBarrel
+MRUItem14=/Game/(PRG)Everyone/BP_MagicChestCarry
+MRUItem15=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestDestroy
+MRUItem16=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire
+MRUItem17=/Game/VFXapprentice/00_Simple_Emitters/Particle_Systems/10_Directional_Spikes
+MRUItem18=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
 MRUItem19=/Game/(LD)Gaetan/LevelSequence/LS_RumRocks12_StaticChestWall
 
 [DetailCategories]
@@ -3812,6 +3813,8 @@ bHideUnrelatedNodes=False
 /Game/(ART)Everyone/Art/PtxTest.PtxTest=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/(ART)Everyone/Art/PtxTest.PtxTest;
 RecentlyPlaced=/Game/(PRG)Everyone/FlammableDebris.FlammableDebris;
 RecentlyPlaced=/Game/(PRG)Everyone/Deliveries/BP_Soup.BP_Soup;
@@ -3830,8 +3833,6 @@ RecentlyPlaced=/Game/PolygonPirates/Meshes/Props/SM_Prop_Stool_02.SM_Prop_Stool_
 RecentlyPlaced=/Game/(PRG)Everyone/Art/LitLanterns.LitLanterns;
 RecentlyPlaced=/Game/(PRG)Everyone/Art/LitTorch.LitTorch;
 RecentlyPlaced=/Game/(PRG)Everyone/ValueDisplayer.ValueDisplayer;
-RecentlyPlaced=/Game/(PRG)Everyone/NewGrog.NewGrog;
-RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -4010,7 +4011,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.ClientOrderNumber\" \"Object.ClientOrderNumber\" "
+Object="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -4046,8 +4047,8 @@ AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
 ThirdPersonCharacter_C=
-Character=
-Pawn=
+Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
+Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase="\"Object.Seconds\" \"Object.Seconds\" "
@@ -4073,7 +4074,7 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Lo
 ParticleModuleLocationBase="\"Object.SourceMovement.SourceMovementScale\" \"Object.SourceMovement.SourceMovementScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 KillerRake_C=
 RumOnTheRocks_C="\"Object.numberOfBuckets\" \"Object.numberOfBuckets\" "
-LevelScriptActor=
+LevelScriptActor="\"Object.MovableChestPos\" \"Object.MovableChestPos\" "
 WaterChore_Patrons_C=
 BeerMug_C=
 SoundAttenuation="\"Object.Settings.Attenuation.PluginSettings\" "
@@ -4127,10 +4128,10 @@ NavigationObjectBase=
 BP_Gamemode_C="\"Object.Seconds\" \"Object.Seconds\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.ClientOrderNumber\" \"Object.ClientOrderNumber\" "
-Visual="\"Object.ClientOrderNumber\" \"Object.ClientOrderNumber\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_CharacterSelect_C="\"Object.PlayerColours\" \"Object.PlayerColours\" "
-UserWidget="\"Object.ClientOrderNumber\" \"Object.ClientOrderNumber\" "
+UserWidget=
 SpringArmComponent="\"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.Tags.ComponentTags\" "
 BP_Camera_C=
@@ -4154,9 +4155,9 @@ SpawnManagerTarget_C="\"Object.Filled\" \"Object.Filled\" "
 BP_Client_C=
 PointLightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
 LocalLightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
-PointLight="\"Object.PointLightComponent\" \"Object.PointLightComponent\" "
+PointLight=
 Light=
-BP_BeerMugWithGrab_C="\"Object.CarrierNone\" \"Object.CarrierNone\" "
+BP_BeerMugWithGrab_C=
 RectLightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
 BP_FoodSpawner_C="\"Object.GrogPrice\" \"Object.GrogPrice\" "
 BP_Grog_C="\"Object.Carriers\" \"Object.Carriers\" "
@@ -4171,13 +4172,13 @@ CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transfo
 GridPanel="\"Object.Render Transform.RenderTransform\" "
 ScaleBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-WBP_OrderNumbers_C="\"Object.ClientOrderNumber\" \"Object.ClientOrderNumber\" "
+WBP_OrderNumbers_C=
 BP_SpawnManagerTarget_C=
 RadialIntMask="\"Object.Tags.ComponentTags\" "
 FieldNodeInt="\"Object.Tags.ComponentTags\" "
 FieldNodeBase="\"Object.Tags.ComponentTags\" "
 RumOnTheRocks_BIGGER_Rev7c_LeadingLines_C=
-TextRenderActor=
+TextRenderActor="\"Object.TextRenderActor.TextRender.Object.Text.TextRenderColor\" "
 LevelStreaming="\"Object.WorldAsset\" \"Object.WorldAsset\" "
 RumOnTheRocks_BIGGER_Rev7c_BigDraft_C="\"Object.PotCommun\" \"Object.PotCommun\" "
 Timer_C="\"Object.CharRef\" \"Object.CharRef\" "
@@ -4208,7 +4209,7 @@ BP_AppleBasket_C=
 RumOnTheRocks_BIGGER_Rev11_newDeliveries_C=
 AudioComponent="\"Object.AttenuationSettings\" \"Object.AttenuationSettings\" "
 NewGrog_C=
-BP_Soup_C="\"Object.SingleCarrierSpeedMalus\" \"Object.SingleCarrierSpeedMalus\" "
+BP_Soup_C=
 BP_Magnum_C=
 DecalComponent="\"Object.Tags.ComponentTags\" "
 PaperGroupedSpriteComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -4220,7 +4221,7 @@ InstancedStaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Re
 SceneCaptureComponent2D="\"Object.Tags.ComponentTags\" "
 SceneCaptureComponent="\"Object.Tags.ComponentTags\" "
 BP_MagicChestStatic_C=
-RumOnTheRocks_BIGGER_Rev12_NewChests_C=
+RumOnTheRocks_BIGGER_Rev12_NewChests_C="\"Object.MovableChestPos\" \"Object.MovableChestPos\" "
 ParticleModuleOrbit="\"Object.Offset.OffsetAmount.Distribution\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleOrbitBase="\"Object.Offset.OffsetAmount.Distribution\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSourceMovement="\"Object.SourceMovement.SourceMovementScale\" \"Object.SourceMovement.SourceMovementScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
@@ -4599,9 +4600,6 @@ NodeTemplateCacheCapMB=20.000000
 
 [/Script/EditorStyle.EditorStyleSettings]
 bShowAllAdvancedDetails=True
-
-[FEditorModeTools]
-CoordSystem=1
 
 [LevelSequenceEditor SequencerSettings]
 FrameNumberDisplayFormat=Seconds
