[FIX] Smaller Sprite on Delivery Event

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,19 +76,8 @@ LastExecutedPlayModeType=PlayMode_InEditorFloating
 LastLevel=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab.BP_BeerMugWithGrab
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers.WBP_OrderNumbers
-OpenAssetsAtExit=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestStart.P_FX_MagicChestStart
-OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_Soup.BP_Soup
-OpenAssetsAtExit=/Game/(PRG)Everyone/BP_Client.BP_Client
-OpenAssetsAtExit=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire.P_FX_MusketFire
-OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_Ribs.BP_Ribs
-OpenAssetsAtExit=/Game/(PRG)Everyone/Deliveries/BP_AppleBasket.BP_AppleBasket
-OpenAssetsAtExit=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests.RumOnTheRocks_BIGGER_Rev12_NewChests:PersistentLevel.RumOnTheRocks_BIGGER_Rev12_NewChests
-OpenAssetsAtExit=/Game/(PRG)Everyone/Art/BP_OrderSprite.BP_OrderSprite
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -135,17 +124,17 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev11_newDeliveries
-MRUItem3=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev08
-MRUItem4=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev06
-MRUItem5=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev01
-MRUItem6=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev10
-MRUItem7=/Game/(ND)Yohan/LevelYohan
-MRUItem8=/Game/(PRG)Jonathan/ScoreScreen
-MRUItem9=/Game/(PRG)Jonathan/ROTR_J_TestGI
-MRUItem10=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev9
-MRUItem11=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev8
+MRUItem1=/Game/(ND)Yohan/LevelYohan
+MRUItem2=/Game/(ND)Yohan/RumOnTheRocks_STRONGER
+MRUItem3=/Game/(LD)Maxime/LevelMax_3
+MRUItem4=/Game/(LD)Maxime/LVL
+MRUItem5=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev07d_LeadingLines
+MRUItem6=/Game/(LD)Gaetan/OLD/RumOnTheRocks
+MRUItem7=/Game/(LD)Gaetan/OLD/RumOnTheRocks_REVISION3
+MRUItem8=/Game/(LD)Gaetan/OLD/LevelGaetan
+MRUItem9=/Game/(LD)Gaetan/BtbBGym
+MRUItem10=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem11=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev11_newDeliveries
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -1286,26 +1275,26 @@ PaperSpriteActor=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponen
 BP_OrderSprite_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LS_RumRocks12_Order2P
-MRUItem1=/Game/(PRG)Everyone/Art/BP_OrderSprite
-MRUItem2=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
-MRUItem3=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestStart
-MRUItem4=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire
-MRUItem5=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
-MRUItem6=/Game/(PRG)Everyone/Deliveries/BP_AppleBasket
-MRUItem7=/Game/(PRG)Everyone/Deliveries/BP_Ribs
-MRUItem8=/Game/(PRG)Everyone/BP_Client
-MRUItem9=/Game/(PRG)Everyone/Deliveries/BP_Soup
-MRUItem10=/Game/(PRG)Everyone/FlammableDebris
-MRUItem11=/Game/(PRG)Everyone/BP_SpawnManagerTarget
-MRUItem12=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem14=/Game/Particles/orbit
-MRUItem15=/Game/(ART)Everyone/Art/PtxTest
-MRUItem16=/Game/(PRG)Everyone/Deliveries/BP_Magnum
-MRUItem17=/Game/(PRG)Everyone/RedBarrel
-MRUItem18=/Game/(PRG)Everyone/BP_MagicChestCarry
-MRUItem19=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestDestroy
+MRUItem0=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev12_NewChests
+MRUItem1=/Game/(ND)Yohan/LevelYohan
+MRUItem2=/Game/(ND)Yohan/RumOnTheRocks_STRONGER
+MRUItem3=/Game/(LD)Maxime/LevelMax_3
+MRUItem4=/Game/(LD)Maxime/LVL
+MRUItem5=/Game/(LD)Gaetan/RumOnTheRocks_BIGGER_Rev07d_LeadingLines
+MRUItem6=/Game/(LD)Gaetan/OLD/RumOnTheRocks
+MRUItem7=/Game/(LD)Gaetan/OLD/RumOnTheRocks_REVISION3
+MRUItem8=/Game/(LD)Gaetan/OLD/LevelGaetan
+MRUItem9=/Game/(LD)Gaetan/BtbBGym
+MRUItem10=/Game/(PRG)Everyone/Art/BP_OrderSprite
+MRUItem11=/Game/(PRG)Everyone/Deliveries/BP_AppleBasket
+MRUItem12=/Game/(PRG)Everyone/Deliveries/BP_Ribs
+MRUItem13=/Game/PolygonPirates/ParticleFX/P_FX_MusketFire
+MRUItem14=/Game/(PRG)Everyone/BP_Client
+MRUItem15=/Game/(PRG)Everyone/Deliveries/BP_Soup
+MRUItem16=/Game/PolygonPirates/ParticleFX/P_FX_MagicChestStart
+MRUItem17=/Game/ThirdPersonBP/Blueprints/UI/WBP_OrderNumbers
+MRUItem18=/Game/(PRG)Everyone/Deliveries/BP_BeerMugWithGrab
+MRUItem19=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -3884,6 +3873,8 @@ bHideUnrelatedNodes=False
 /Game/(PRG)Everyone/Deliveries/BP_Ribs.BP_Ribs=1
 /Game/(PRG)Everyone/Deliveries/BP_AppleBasket.BP_AppleBasket=1
 /Game/(ART)Everyone/Art/PtxTest.PtxTest=1
+/Game/PolygonPirates/ParticleFX/P_FX_MagicChestStart.P_FX_MagicChestStart=1
+/Game/(PRG)Everyone/Art/BP_OrderSprite.BP_OrderSprite=1
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -4084,7 +4075,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.Sprite.SpriteColor\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -4147,7 +4138,7 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius\" \"Object.Lo
 ParticleModuleLocationBase="\"Object.Location.StartRadius\" \"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 KillerRake_C=
 RumOnTheRocks_C="\"Object.numberOfBuckets\" \"Object.numberOfBuckets\" "
-LevelScriptActor="\"Object.MovableChestPos\" \"Object.MovableChestPos\" "
+LevelScriptActor=
 WaterChore_Patrons_C=
 BeerMug_C=
 SoundAttenuation="\"Object.Settings.Attenuation.PluginSettings\" "
@@ -4225,7 +4216,7 @@ MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 AnimBP_Skeleton_C="\"Object.speed\" \"Object.speed\" "
 AnimInstance="\"Object.speed\" \"Object.speed\" "
 SpawnManagerTarget_C="\"Object.Filled\" \"Object.Filled\" "
-BP_Client_C="\"Object.LightColAlcohol\" \"Object.LightColAlcohol\" "
+BP_Client_C=
 PointLightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
 LocalLightComponent="\"Object.Light.LightColor\" \"Object.Tags.ComponentTags\" "
 PointLight=
@@ -4294,7 +4285,7 @@ InstancedStaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Re
 SceneCaptureComponent2D="\"Object.Tags.ComponentTags\" "
 SceneCaptureComponent="\"Object.Tags.ComponentTags\" "
 BP_MagicChestStatic_C=
-RumOnTheRocks_BIGGER_Rev12_NewChests_C="\"Object.MovableChestPos\" \"Object.MovableChestPos\" "
+RumOnTheRocks_BIGGER_Rev12_NewChests_C=
 ParticleModuleOrbit="\"Object.Offset.OffsetAmount.Distribution\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleOrbitBase="\"Object.Offset.OffsetAmount.Distribution\" \"Object.Rotation.RotationAmount.Distribution\" \"Object.RotationRate.RotationRateAmount.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSourceMovement="\"Object.SourceMovement.SourceMovementScale\" \"Object.SourceMovement.SourceMovementScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
