--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -18,6 +18,10 @@ Paths=../../../Engine/Plugins/MovieScene/MovieRenderPipeline/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/PostSplashScreen/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Editor/SpeedTreeImporter/Content
+Paths=../../../Engine/Plugins/Experimental/MotoSynth/Content
+Paths=../../../Engine/Plugins/Runtime/AudioSynesthesia/Content
+Paths=../../../Engine/Plugins/Runtime/Synthesis/Content
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
@@ -49,12 +53,4 @@ FlipNormalMapGreenChannel=False
 
 [FProjectLauncher]
 AdvancedMode=True
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
