[PRG] Basis of the Ships

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -15,6 +15,7 @@ FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
++NativizeBlueprintAssets=(FilePath="/Game/(PRG)Everyone/Ships/BP_BasicShip")
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
@@ -32,6 +33,7 @@ HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
