--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,11 +86,12 @@ LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/EveryoneProg/Events/EventManager.EventManager
-OpenAssetsAtExit=/Game/EveryoneProg/Events/GoldenTears.GoldenTears
-OpenAssetsAtExit=/Game/EveryoneProg/Managers/BP_CoinSpawner.BP_CoinSpawner
-OpenAssetsAtExit=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig.LevelMax_3b_ProgTreeAndDig:PersistentLevel.LevelMax_3b_ProgTreeAndDig
+OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2.sprite_fx_eclair_v2
+OpenAssetsAtExit=/Game/VFXapprentice/VFX_ThunderPrepare.VFX_ThunderPrepare
+OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat.sprite_fx_eclair_v2_Mat
+OpenAssetsAtExit=/Game/VFXapprentice/Mat_Borios.Mat_Borios
+OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite.sprite_fx_eclair_v2_Sprite
+OpenAssetsAtExit=/Game/EveryoneProg/Dangers/BP_Thunder.BP_Thunder
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -149,14 +150,14 @@ GridEnabled=False
 [MRU]
 MRUItem0=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
 MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/Menus/MapMenu
-MRUItem3=/Game/Menus/MainMenu
-MRUItem4=/Game/GaetanLD/BtbBGym
-MRUItem5=/Game/(OBSOLETE)/(LD)Maxime/LevelMax_3
-MRUItem6=/Game/MaximeLD/LevelMax_3a_ProgSloop
-MRUItem7=/Game/GaetanLD/RumOnTheRocks_BIGGER_Rev12
-MRUItem8=/Game/ThirdPersonBP/Maps/LevelMax_3b_ProgTreeAndDig
-MRUItem9=/Game/MaximeLD/LevelMax_3
+MRUItem2=/Game/MaximeLD/LevelMax_3
+MRUItem3=/Game/MaximeLD/LevelMax_3a_ProgSloop
+MRUItem4=/Game/Menus/MapMenu
+MRUItem5=/Game/Menus/MainMenu
+MRUItem6=/Game/GaetanLD/BtbBGym
+MRUItem7=/Game/(OBSOLETE)/(LD)Maxime/LevelMax_3
+MRUItem8=/Game/GaetanLD/RumOnTheRocks_BIGGER_Rev12
+MRUItem9=/Game/ThirdPersonBP/Maps/LevelMax_3b_ProgTreeAndDig
 MRUItem10=/Game/GaetanLD/TreasureHunt_CurseOfBim
 MRUItem11=/Game/(LD)Gaetan/BtbBGym
 
@@ -1142,6 +1143,7 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1262,7 +1264,7 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettin
 WaterPaymentZone_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 USnapSystemSettings=InputSettings.Bindings.AxisMappings,
 KillerRake_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-SceneComponent=
+SceneComponent=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 RumOnTheRocks_C=
 WaterChore_Patrons_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BeerMug_C=
@@ -1466,32 +1468,32 @@ LevelMax_3b_ProgTreeAndDig_C=StaticMeshComponent.Physics.ConstraintsGroup,Static
 BP_Thunder_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 ThunderCaller_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 EventManager_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
-GoldenTears_C=
+GoldenTears_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 K2Node_GetClassDefaults=K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 UserWidget=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/EveryoneProg/Events/GoldenTears
-MRUItem1=/Game/EveryoneProg/Managers/BP_CoinSpawner
-MRUItem2=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
-MRUItem3=/Game/EveryoneProg/Events/EventManager
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem5=/Game/EveryoneProg/Dangers/BP_Thunder
-MRUItem6=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
-MRUItem7=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
-MRUItem8=/Game/EveryoneProg/Managers/ThunderCaller
-MRUItem9=/Game/VFXapprentice/VFX_ThunderPrepare
-MRUItem10=/Game/EveryoneProg/BP_ScreenShakeThunder
-MRUItem11=/Game/EveryoneProg/BP_ScreenShake
-MRUItem12=/Game/EveryoneProg/Dangers/RedBarrel
-MRUItem13=/Game/VFXapprentice/FX_S_Elec_01_5x2
-MRUItem14=/Game/VFXapprentice/VFX_ThunderStrike
-MRUItem15=/Game/EveryoneProg/BP_MovingRaft
-MRUItem16=/Game/VFXapprentice/Test
-MRUItem17=/Game/EveryoneProg/BP_Sloop
-MRUItem18=/Game/EveryoneProg/RedBarrel
-MRUItem19=/Game/EveryoneProg/BP_TreasureTree
+MRUItem0=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
+MRUItem1=/Game/EveryoneProg/Dangers/BP_Thunder
+MRUItem2=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite
+MRUItem3=/Game/VFXapprentice/Mat_Borios
+MRUItem4=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat
+MRUItem5=/Game/VFXapprentice/sprite_fx_eclair_v2
+MRUItem6=/Game/VFXapprentice/VFX_ThunderPrepare
+MRUItem7=/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite
+MRUItem8=/Game/Menus/WBP_PauseMenu
+MRUItem9=/Game/MaximeLD/LevelMax_3
+MRUItem10=/Game/MaximeLD/LevelMax_3a_ProgSloop
+MRUItem11=/Game/EveryoneProg/Events/EventManager
+MRUItem12=/Game/EveryoneProg/Managers/BP_CoinSpawner
+MRUItem13=/Game/EveryoneProg/Events/GoldenTears
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem15=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
+MRUItem16=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
+MRUItem17=/Game/EveryoneProg/Managers/ThunderCaller
+MRUItem18=/Game/EveryoneProg/BP_ScreenShakeThunder
+MRUItem19=/Game/EveryoneProg/BP_ScreenShake
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -4545,6 +4547,19 @@ BP_Sky_Sphere_C.None=True
 BP_Sky_Sphere_C.BP_Skydome=True
 BP_Sky_Sphere_C.Utilities=True
 BP_Sky_Sphere_C.Game=True
+WBP_PauseMenu_C.Default=True
+WBP_PauseMenu_C.Appearance=True
+WBP_PauseMenu_C.Designer=True
+WBP_PauseMenu_C.Input=True
+WBP_PauseMenu_C.Interaction=True
+WBP_PauseMenu_C.Performance=True
+WBP_PauseMenu_C.Layout=True
+WBP_PauseMenu_C.Behavior=True
+WBP_PauseMenu_C.Render Transform=True
+WBP_PauseMenu_C.Accessibility=True
+WBP_PauseMenu_C.Clipping=True
+WBP_PauseMenu_C.Navigation=True
+WBP_PauseMenu_C.Localization=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -4833,7 +4848,10 @@ bHideUnrelatedNodes=False
 /Game/EveryoneProg/Managers/ThunderCaller.ThunderCaller=0
 /Game/EveryoneProg/Dangers/BP_Thunder.BP_Thunder=1
 /Game/EveryoneProg/Events/GoldenTears.GoldenTears=1
-/Game/EveryoneProg/Events/EventManager.EventManager=1
+/Game/EveryoneProg/Events/EventManager.EventManager=0
+/Game/Menus/WBP_PauseMenu.WBP_PauseMenu=1
+/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite.FX_S_Elec_01_5x2_Sprite=0
+/Game/VFXapprentice/sprite_fx_eclair_v2.sprite_fx_eclair_v2=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/EveryoneProg/Events/GoldenTears.GoldenTears;
@@ -5056,7 +5074,7 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
@@ -5081,7 +5099,7 @@ ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase="\"Object.Seconds\" "
 Info="\"Object.Seconds\" "
 StaticMesh=
-StreamableRenderAsset=
+StreamableRenderAsset="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
 MonSuperSeau_C=
 SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -5155,10 +5173,10 @@ NavigationObjectBase=
 BP_Gamemode_C="\"Object.Seconds\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.TickFrequency\" "
-Visual="\"Object.TickFrequency\" "
+Widget=
+Visual=
 WBP_CharacterSelect_C="\"Object.PlayerColours\" \"Object.PlayerColours\" "
-UserWidget="\"Object.TickFrequency\" "
+UserWidget=
 SpringArmComponent="\"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 BP_Camera_C=
@@ -5275,7 +5293,7 @@ BP_GoldBag_WithGrab_C=
 BP_WS_Chest2P_C=
 ChestAndDelivery_Spawner_C="\"Object.Default.TargetPointCHEST\" "
 TargetPoint=
-BP_CoinSpawner_C="\"Object.CountSpawn\" "
+BP_CoinSpawner_C=
 ToolMenu="\"Object.bCloseSelfOnly\" "
 ToolMenuBase="\"Object.bCloseSelfOnly\" "
 BP_Trig_CoinPusher_C=
@@ -5357,7 +5375,9 @@ CameraShakeBase="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotO
 BP_ScreenShakeBarrel_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
 ThunderCaller_C="\"Object.Default.ThunderTarget\" \"Object.Actor.PivotOffset\" "
 EventManager_C="\"Object.Default.EventTimerMins\" \"Object.Default.EventTimerSecs\" \"Object.Golden Tears Vars.Target Coin Spawner\" "
-GoldenTears_C="\"Object.SpawnOneBurstCoin\" "
+GoldenTears_C="\"Object.Default.TargetCoinSpawner\" "
+Texture2D="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
+Texture="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
