--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,6 +79,7 @@ ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 NewWindowWidth=1910
 NewWindowHeight=1006
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [EditorStartup]
 LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
@@ -86,12 +87,9 @@ LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2.sprite_fx_eclair_v2
-OpenAssetsAtExit=/Game/VFXapprentice/VFX_ThunderPrepare.VFX_ThunderPrepare
-OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat.sprite_fx_eclair_v2_Mat
-OpenAssetsAtExit=/Game/VFXapprentice/Mat_Borios.Mat_Borios
-OpenAssetsAtExit=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite.sprite_fx_eclair_v2_Sprite
-OpenAssetsAtExit=/Game/EveryoneProg/Dangers/BP_Thunder.BP_Thunder
+OpenAssetsAtExit=/Game/Menus/WBP_PauseMenu.WBP_PauseMenu
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BP_PlayerController.BP_PlayerController
+OpenAssetsAtExit=/Game/Menus/BP_Button.BP_Button
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -206,7 +204,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/EveryoneProg/Events
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -1143,7 +1141,6 @@ bDeleteSourceFilesWithAssets=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1264,7 +1261,7 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettin
 WaterPaymentZone_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 USnapSystemSettings=InputSettings.Bindings.AxisMappings,
 KillerRake_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-SceneComponent=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
+SceneComponent=
 RumOnTheRocks_C=
 WaterChore_Patrons_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BeerMug_C=
@@ -1462,7 +1459,7 @@ CrashReporterSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureR
 DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
-BP_Button_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,
+BP_Button_C=
 WBP_MainMenu_C=
 LevelMax_3b_ProgTreeAndDig_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 BP_Thunder_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
@@ -1472,28 +1469,31 @@ GoldenTears_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.Constr
 K2Node_GetClassDefaults=K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 UserWidget=
+BP_PlayerController_C=
+WBP_PauseMenu_C=
+PlayerController=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
-MRUItem1=/Game/EveryoneProg/Dangers/BP_Thunder
-MRUItem2=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite
-MRUItem3=/Game/VFXapprentice/Mat_Borios
-MRUItem4=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat
-MRUItem5=/Game/VFXapprentice/sprite_fx_eclair_v2
-MRUItem6=/Game/VFXapprentice/VFX_ThunderPrepare
-MRUItem7=/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite
-MRUItem8=/Game/Menus/WBP_PauseMenu
-MRUItem9=/Game/MaximeLD/LevelMax_3
-MRUItem10=/Game/MaximeLD/LevelMax_3a_ProgSloop
-MRUItem11=/Game/EveryoneProg/Events/EventManager
-MRUItem12=/Game/EveryoneProg/Managers/BP_CoinSpawner
-MRUItem13=/Game/EveryoneProg/Events/GoldenTears
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem15=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
-MRUItem16=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
-MRUItem17=/Game/EveryoneProg/Managers/ThunderCaller
-MRUItem18=/Game/EveryoneProg/BP_ScreenShakeThunder
-MRUItem19=/Game/EveryoneProg/BP_ScreenShake
+MRUItem0=/Game/Menus/BP_Button
+MRUItem1=/Game/ThirdPersonBP/Blueprints/BP_PlayerController
+MRUItem2=/Game/Menus/WBP_PauseMenu
+MRUItem3=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
+MRUItem4=/Game/EveryoneProg/Dangers/BP_Thunder
+MRUItem5=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite
+MRUItem6=/Game/VFXapprentice/Mat_Borios
+MRUItem7=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat
+MRUItem8=/Game/VFXapprentice/VFX_ThunderPrepare
+MRUItem9=/Game/VFXapprentice/sprite_fx_eclair_v2
+MRUItem10=/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite
+MRUItem11=/Game/MaximeLD/LevelMax_3
+MRUItem12=/Game/MaximeLD/LevelMax_3a_ProgSloop
+MRUItem13=/Game/EveryoneProg/Events/EventManager
+MRUItem14=/Game/EveryoneProg/Managers/BP_CoinSpawner
+MRUItem15=/Game/EveryoneProg/Events/GoldenTears
+MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem17=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
+MRUItem18=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
+MRUItem19=/Game/EveryoneProg/Managers/ThunderCaller
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -4560,6 +4560,8 @@ WBP_PauseMenu_C.Accessibility=True
 WBP_PauseMenu_C.Clipping=True
 WBP_PauseMenu_C.Navigation=True
 WBP_PauseMenu_C.Localization=True
+BP_PlayerController_C.Default=True
+BP_PlayerController_C.LOD=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -4852,6 +4854,9 @@ bHideUnrelatedNodes=False
 /Game/Menus/WBP_PauseMenu.WBP_PauseMenu=1
 /Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite.FX_S_Elec_01_5x2_Sprite=0
 /Game/VFXapprentice/sprite_fx_eclair_v2.sprite_fx_eclair_v2=0
+/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite.sprite_fx_eclair_v2_Sprite=1
+/Game/VFXapprentice/Mat_Borios.Mat_Borios=1
+/Game/VFXapprentice/sprite_fx_eclair_v2_Mat.sprite_fx_eclair_v2_Mat=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/EveryoneProg/Events/GoldenTears.GoldenTears;
@@ -5056,7 +5061,7 @@ MacTargetSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object=
+Object="\"Object.MouseStyle\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" \"Object.MultiplayerOptions.ServerDebugDrawingColorTint\" "
@@ -5075,8 +5080,8 @@ LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 BoxComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 ShapeComponent=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -5173,10 +5178,10 @@ NavigationObjectBase=
 BP_Gamemode_C="\"Object.Seconds\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget=
-Visual=
+Widget="\"Object.MouseStyle\" "
+Visual="\"Object.MouseStyle\" "
 WBP_CharacterSelect_C="\"Object.PlayerColours\" \"Object.PlayerColours\" "
-UserWidget=
+UserWidget="\"Object.ButtonArray\" "
 SpringArmComponent="\"Object.Tags.ComponentTags\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.Tags.ComponentTags\" "
 BP_Camera_C=
@@ -5210,8 +5215,8 @@ WidgetComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.Custo
 WBP_OrderTimer_C="\"Object.Render Transform.RenderTransform\" "
 WBP_DeliverTimer_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+ContentWidget="\"Object.MouseStyle\" "
+PanelWidget="\"Object.MouseStyle\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GridPanel="\"Object.Render Transform.RenderTransform\" "
@@ -5335,8 +5340,8 @@ BP_Cannon_C=
 SplineComponent="\"Object.Spline.DefaultUpVector\" \"Object.Tags.ComponentTags\" "
 WBP_PlayerScores_ranked_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_PressurePlate_C=
-BP_Button_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+BP_Button_C="\"Object.MouseStyle\" "
+Button="\"Object.MouseStyle\" "
 WBP_MapMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_MainMenu_C="\"Object.ButtonArray\" "
 BP_TreasureTree_C="\"Object.Default.ObjectsToSpawn\" "
@@ -5378,6 +5383,10 @@ EventManager_C="\"Object.Default.EventTimerMins\" \"Object.Default.EventTimerSec
 GoldenTears_C="\"Object.Default.TargetCoinSpawner\" "
 Texture2D="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
 Texture="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
+BP_PlayerController_C="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" "
+PlayerController="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" "
+Controller="\"Object.MouseInterface.ClickEventKeys\" \"Object.Game.Game|Feedback\" \"Object.Controller.Controller|Transform\" "
+WBP_PauseMenu_C="\"Object.ButtonArray\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -5724,7 +5733,7 @@ bFlattenFavoritesMenus=True
 bFavorPureCastNodes=False
 bAutoCastObjectConnections=False
 bShowViewportOnSimulate=False
-bShowInheritedVariables=False
+bShowInheritedVariables=True
 bAlwaysShowInterfacesInOverrides=True
 bShowParentClassInOverrides=True
 bShowEmptySections=True
