--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BBTB
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig.LevelMax_3b_ProgTreeAndDig
 GameDefaultMap=/Game/Menus/MainMenu.MainMenu
 TransitionMap=None
 bUseSplitscreen=False
